обновления ротаций + тендер превью